[package]
authors = [ 'TON DEV SOLUTIONS LTD <support@tonlabs.io>' ]
description = 'TVM Linker'
documentation = 'https://docs.ton.dev'
edition = '2021'
homepage = 'https://ton.dev'
keywords = [ 'TON', 'linker', 'TVM', 'tonlabs' ]
license-file = 'LICENSE.md'
name = 'tvm_linker'
readme = 'README.md'
repository = 'https://github.com/tonlabs/TVM-linker'
version = '0.20.6'

[[bin]]
name = 'tvm_linker'
path = 'src/main.rs'

[dependencies]
anyhow = "1.0.81"
base64 = '0.13'
clap = '2.33'
crc = '3.0'
ed25519 = '2.2'
ed25519-dalek = '1.0'
failure = '0.1'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
rand = '0.8'
regex = '1'
serde_json = '1.0'
sha2 = '0.10'
simplelog = '0.6'
serde = { features = [ 'derive' ], version = '1.0.197' }

tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0' }
tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0', features = [ 'gosh' ]}
tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0' }
tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0' }
tvm_vm = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'rc-1.47.0', features = ['gosh'] }

[dev-dependencies]
assert_cmd = '2.0.5'
predicates = '3.0.3'
rayon = '1.5.3'
similar = '2.2.0'

[lib]
name = 'ton_utils'
path = 'src/lib.rs'
test = false

